@@ -1,0 +1,20 @@
+{% macro t(key) %}{{ {
+  "language": "zh-Hant",
+  "clipboard.copy": "複製",
+  "clipboard.copied": "已複製",
+  "edit.link.title": "編輯此頁",
+  "footer.previous": "上一頁",
+  "footer.next": "下一頁",
+  "meta.comments": "留言",
+  "meta.source": "來源",
+  "search.language": "jp",
+  "search.placeholder": "搜尋",
+  "search.result.placeholder": "打字進行搜尋",
+  "search.result.none": "沒有符合的項目",
+  "search.result.one": "找到 1 個符合的項目",
+  "search.result.other": "找到 # 個符合的項目",
+  "search.tokenizer": "[\，\。]+",
+  "skip.link.title": "跳轉到",
+  "source.link.title": "前往倉庫",
+  "toc.title": "本頁目錄"
+}[key] }}{% endmacro %}
