@@ -1,6 +1,6 @@
 {
   "name": "mkdocs-material",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "description": "A Material Design theme for MkDocs",
   "keywords": [
     "mkdocs",
